# provider

./: .bumpversion.cfg  .dockerignore  .version.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  start_local_provider.sh
ocean_provider/: models.py  myapp.py  user_nonce.py
ocean_provider/file_types/: definitions.py
ocean_provider/routes/: consume.py
ocean_provider/validation/: algo.py
tests/unit/: test_definitions_filename.py
